--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "pg": "^8.11.3",
+    "resend": "^6.7.0",
     "stripe": "^14.25.0",
     "uuid": "^9.0.1"
   },
