--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,12 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "openai": "^6.15.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "resend": "^6.7.0",
+    "sharp": "^0.33.5",
     "stripe": "^14.25.0",
     "uuid": "^9.0.1"
   },
