progress dump (added new template)

--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pg": "^8.11.3",
+    "replicate": "^0.34.1",
     "resend": "^6.7.0",
     "sharp": "^0.33.5",
     "stripe": "^14.25.0",
