--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,12 @@
     "@aws-sdk/client-s3": "^3.400.0",
     "@aws-sdk/s3-request-presigner": "^3.400.0",
     "@google/generative-ai": "^0.21.0",
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "openai": "^6.15.0",
